--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,81 @@
+*{
+    margin:0;
+    padding:0;
+}
+
 body{
     margin:0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 17px;
-    color: #926239;
+    color:goldenrod;
+    line-height: 1.6;
 }
+
+#linkedlists{
+    background-image:url('../img/cohort.jpg');
+    background-size: cover;
+    background-position: center;
+    height:100vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0 20px;
+}
+#linkedlists h1 {
+    font-size: 50px;
+    line-height: 1.2;
+
+}
+
+#linkedlists p{
+    font-size: 20px;
+}
+#linkedlists .button{
+    font-size:18px;
+    text-decoration:none;
+    color:whitesmoke;
+    border:goldenrod 1px solid;
+    padding:10px 20px;
+    border-radius:10px;
+    margin-top:20px;
+  }
+  
+  #linkedlists .button:hover{
+    background:goldenrod;
+    color:#fff;
+  }
+
+
+#section-a{
+    padding:20px;
+    background:#926239;
+    color:#fff;
+    text-align:center;
+  }
+
+
+#section-b{
+    padding:20px;
+    background:#f4f4f4;
+    text-align:center;
+  }
+  
+  #section-c{
+    display:flex;
+  }
+  
+  #section-c div{
+    padding:20px;
+  }
+  
+  #section-c .box-1, #section-c .box-3{
+    background:#926239;
+    color:#fff;
+  }
+  
+  #section-c .box-2{
+    background:#f9f9f9;
+  }
+  
