--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body{
     text-decoration:none;
     color:whitesmoke;
     border:goldenrod 1px solid;
+    background:goldenrod;
     padding:10px 20px;
     border-radius:10px;
     margin-top:20px;
