--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: blue;
+    color: rgba(0, 179, 255, 0.79);
     padding: 0 20px;
 }
 #linkedlists h1 {
