--- a/css/style.css
+++ b/css/style.css
@@ -21,18 +21,22 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
-    text-shadow: goldenrod;
     color: rgba(0, 179, 255, 0.79);
+    text-shadow: goldenrod;
     padding: 0 20px;
 }
 #linkedlists h1 {
     font-size: 50px;
     line-height: 1.2;
+    color: rgba(0, 179, 255, 0.79);
+    text-shadow: goldenrod;
 
 }
 
 #linkedlists p{
     font-size: 20px;
+    color: rgba(0, 179, 255, 0.79);
+    text-shadow: goldenrod;
 }
 #linkedlists .button{
     font-size:18px;
