--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: goldenrod;
+    color: whitesmoke;
     text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
     padding: 0 20px;
 }
